--- a/pom.xml
+++ b/pom.xml
@@ -84,8 +84,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>3.8.1</source>
-                    <target>3.8.1</target>
+			<maven.compiler.source>1.8</maven.compiler.source>
+                       <maven.compiler.target>1.8</maven.compiler.target>
+                    
                 </configuration>
             </plugin>
         </plugins>
