--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 	<description>learning micro-services using sping boot</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<maven.compiler.source>3.6.2</maven.compiler.source>
+		<maven.compiler.target>3.6.2</maven.compiler.target>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -85,7 +88,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>9</source>
-                    <target>3</target>
+                    <target>9</target>
                 </configuration>
             </plugin>
         </plugins>
