--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,6 @@
 	<description>learning micro-services using sping boot</description>
 	<properties>
 		<java.version>1.8</java.version>
-		<maven.compiler.source>3.8.1</maven.compiler.source>
-		<maven.compiler.target>3.8.1</maven.compiler.target>
 
 	</properties>
 	<dependencies>
@@ -86,6 +84,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>9</source>
+					<target>9</target>
+				</configuration>
 
             </plugin>
         </plugins>
