--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,8 @@ spring.servlet.multipart.max-request-size=2MB
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=techpiratesteam@gmail.com
-spring.mail.password=ugcvfloqlidvntdw
+spring.mail.password=Pirates@123
+
 
 
 # Other properties
