--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ spring.servlet.multipart.max-request-size=2MB
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=techpiratesteam@gmail.com
-spring.mail.password=ugcvfloqlidvntdw
+spring.mail.username=mailsendsaisri123@gmail.com
+spring.mail.password=SaiSriHaran@3105
 
 
 
